# extension-rive

./: .gitignore  CHRIS.md  LICENSE  README.md  README_DEVELOPMENT.md  chris.appmanifest  game.appmanifest  game.project  liveupdate.mounts  wagyu-old.appmanifest  wagyu.appmanifest
.github/workflows/: bob.yml  branch-artifacts.yml  defoldsdk.yml  device-tests.yml  test_html5.yml  trigger-site-rebuild.yml  update-rive.yml  viewer.yml
assets/: car.rivemodel  character.rivescene  clipped_circle_star.riv  emoji.rivescene  empty.riv  main.atlas  marty.rivescene  off_road_car.riv  rive.fp  sphere.riv  sphere_clipped.riv  stroke.riv  stroke.rivescene  test.atlas  test.fp  test.material  test.rivemodel  test.rivescene  test.vp
assets/dragon/: dragon.atlas  dragon.rivescene  dragon_v2.riv
assets/nested_artboards/: lights.riv  lights.rivemodel  lights.rivescene
ci/rendertest/: build_report.py  build_summary.py  capture.mjs  engine_template.html  report.css  run.sh  settings_html5.ini
defold-rive/: ext.manifest  ext.properties
defold-rive/api/: rive.lua  rive.script_api
defold-rive/assets/: rive.fp  rive.vp  rivemodel.material  rivemodel_blit.material  rivemodel_blit.vp  template.rivemodel  template.rivescene
defold-rive/commonsrc/: atlas.cpp  bones.cpp  commands.cpp  factory.cpp  file.cpp  file.h  file_meta.cpp  file_meta.h  font.cpp  rive_ddf.proto  tess_renderer.cpp  texture.cpp  texture.h  vertices.cpp
defold-rive/include/: contour_render_path.hpp  glad.h  renderer.h  renderer.hpp  rive_lua_wrapper.h  rive_render_api.h
defold-rive/lua/: rive.render  rive.render_script
defold-rive/pluginsrc/: bones.cpp  bones.h  crash.cpp  crash.h  defold_jni.cpp  defold_jni.h  plugin.cpp  render_jni.cpp  render_jni.h  rive_file.cpp  rive_file.h  rive_jni.cpp  rive_jni.h  rive_renderer_null.cpp
defold-rive/src/: comp_rive.cpp  comp_rive.h  comp_rive_databinding.cpp  comp_rive_private.h  comp_rive_statemachine.cpp  extension.cpp  font.cpp  res_rive_data.cpp  res_rive_data.h  res_rive_model.cpp  res_rive_model.h  res_rive_scene.cpp  res_rive_scene.h  script_defold.cpp  script_defold.h  script_rive.cpp  script_rive.h  script_rive_artboard.cpp  script_rive_cmd.cpp  script_rive_cmd.h  script_rive_databinding.cpp  script_rive_file.cpp  script_rive_handles.cpp  script_rive_handles.h  script_rive_listeners.cpp  script_rive_listeners.h  script_rive_private.h  script_rive_structs.cpp  script_rive_viewmodel.cpp  script_rive_viewmodel_property.cpp  viewmodel_instance_registry.cpp  viewmodel_instance_registry.h
docs/: index.md
input/: game.input_binding
main/: align_to_center.script  bones.collection  bones.script  cursor.collection  cursor.script  default.render_script  gui.gui  gui.gui_script  loader.collection  loader.script  main.collection  main.script  many.collection  many.script  many_small.collection  nested.collection  stroke.collection
main/ac2/: ac2.collection  ac2.rivescene  ac2.script  ac2_ui_experiment.riv
main/bones/: bone.go  bones.collection  marty.rivescene
main/camera/: camera.collection  camera.rivescene  camera.script
main/car/: car.collection  car.rivemodel  car.rivescene  gui.gui
main/circleui/: 5649-11315-circle-fui.riv  circleui.collection  circleui.rivescene  circleui.script
main/cursor/: cursor.collection  cursor.script  emoji.riv  emoji.rivescene
main/databind/: 14447-40690-game-achievement-badge-data-binding.riv  achievement.rivescene  calc.riv  calc.rivemodel  calc.rivescene  databind.collection  databind.script  dynamic_modal.riv  loader_example_for_data_binding.riv  modal.rivescene  progress.rivescene
main/databind-artboard/: databind-artboard.collection  databind-artboard.script  swap_character_assets.rev  swap_character_assets.riv  swap_character_assets.rivemodel  swap_character_assets.rivescene  swap_character_main.riv  swap_character_main.rivemodel  swap_character_main.rivescene
main/dragon/: dragon.collection
main/egg/: egg.collection  egg.rivemodel  egg.rivescene  egg.script  egg_v2.riv
main/fighting-game/: fighting-game.collection  fighting-game.rivescene  fighting-game.script
main/fontfallback/: fallbackfont.rev  fallbackfont.riv  fontfallback.collection  fontfallback.rivescene  fontfallback.script
main/ghost/: event.rivescene  event.script  ghost.collection  ghost.rivescene  ghost.script  new_file.riv  recreation_game_v2.riv
main/greedyimp/: 4224-8759-greedy-imp.riv
main/grimley/: grimley.collection  grimley.rivescene  grimley.script
main/input/: input.collection  input.riv  input.rivescene  input.script
main/layout/: layout.collection  layout.riv  layout.rivemodel  layout.rivescene  layout.script
main/lights/: lights.collection  lights.riv  lights.rivemodel  lights.rivescene
main/menu/: back.go  back.gui  back.gui_script  menu.collection  menu.gui  menu.gui_script
main/nested/: lights.rivemodel  lights.rivescene  nested.collection
main/outofband/: out-of-band.rivescene  outofband-assets.collection  outofband-scene.collection  outofband.collection  outofband.script  outofband_assets.script  outofband_scene.script  walle.atlas  walle.rivescene
main/quad/: quad.collection  quad.riv  quad.rivescene  quad_clipping.riv  quad_gradient.riv
main/scifihud/: scifihud.collection  scifihud.rivescene  scifihud.script
main/scrollist/: interpolatescroll.riv  scrollist.collection  scrolllist.rev  (+5 more)
pr-253/: index.html  summary.json
pr-254/: index.html
utils/: README.md  bin2cpp.py  build_android.sh  build_darwin.sh  build_emscripten.sh  build_headers.sh  build_linux.sh  build_pls.sh  build_plugin.sh  build_plugins.sh  build_rive_runtime.sh  copy_harfbuzz.sh  copy_rive_headers.py  download_defoldsdk.sh  gen_embedded_shaders.sh  rive-windows.patch  rive.patch  test_plugin.sh  update_rive_runtime.sh  update_script_api.py  write_rive_version_header.py
utils/plugin/: CMakeLists.txt  README.md  build.sh  download_defoldsdk.sh  symbolize_signal_dump.sh  test.sh  test_plugin.bat  test_plugin.sh
utils/plugin/src/: plugin.cpp
utils/viewer/: CMakeLists.txt  README.md  build.sh  gen_shaders.py  make_solution.sh  viewer.cpp
(+235 files in other folders)
